--- a/src/main/resources/com/mmn/circuitscourts/fxml/Admin/AddEntreprise.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Admin/AddEntreprise.fxml
@@ -10,11 +10,13 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: #EAECF0;" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mmn.circuitscourts.controller.admin.AddEntrepriseController">
+<StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: #EAECF0;"
+           stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
+           fx:controller="com.mmn.circuitscourts.controller.admin.AddEntrepriseController">
     <children>
         <BorderPane fx:id="container" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: white;">
             <left>
-                <fx:include source="Sidebar.fxml" />
+                <fx:include source="Sidebar.fxml"/>
             </left>
             <center>
 
@@ -22,77 +24,95 @@
             <center>
                 <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                     <children>
-                        <Button mnemonicParsing="false" onMouseClicked="#onBackButton" pickOnBounds="true" styleClass="back-button" text="Retour">
+                        <Button mnemonicParsing="false" onMouseClicked="#onBackButton" pickOnBounds="true"
+                                styleClass="back-button" text="Retour">
                             <graphic>
-                                <Region styleClass="back-button-img" />
+                                <Region styleClass="back-button-img"/>
                             </graphic>
                         </Button>
                         <Label styleClass="main-title" text="Création d'une entreprise">
                             <VBox.margin>
-                                <Insets top="20.0" />
-                            </VBox.margin></Label>
-                  <HBox alignment="CENTER" prefHeight="518.0" prefWidth="871.0" spacing="30.0">
-                     <children>
-                        <VBox maxHeight="350.0" prefWidth="400.0" styleClass="profil-container">
-                           <children>
-                              <VBox alignment="CENTER_LEFT" maxHeight="56.0" prefHeight="200.0" prefWidth="100.0" styleClass="profil-container-header">
-                                 <children>
-                                    <Label styleClass="profil-container-header-title" text="Détails de l'entreprise" />
-                                 </children>
-                                 <padding>
-                                    <Insets left="20.0" />
-                                 </padding>
-                              </VBox>
-                              <VBox prefHeight="285.0" prefWidth="398.0" spacing="20.0">
-                                 <children>
-                                            <TextField fx:id="adresse" maxWidth="250.0" minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="Adresse de l'entreprise" />
-                                            <TextField fx:id="numTel" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0" promptText="Numéro de Tel" />
-                                            <TextField fx:id="gps" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0" promptText="Coordonnées GPS de l'entreprise" />
-                                 </children>
-                                 <padding>
-                                    <Insets left="30.0" top="40.0" />
-                                 </padding>
-                              </VBox>
-                           </children>
-                        </VBox>
-                        <VBox maxHeight="350.0" maxWidth="400.0" prefWidth="400.0" styleClass="profil-container">
-                           <children>
-                              <VBox alignment="CENTER_LEFT" maxHeight="56.0" prefHeight="200.0" prefWidth="100.0" styleClass="profil-container-header">
-                                 <children>
-                                    <Label styleClass="profil-container-header-title" text="Détails du propriétaire" />
-                                 </children>
-                                 <VBox.margin>
-                                    <Insets />
-                                 </VBox.margin>
-                                 <padding>
-                                    <Insets left="20.0" />
-                                 </padding>
-                              </VBox>
-                              <VBox prefHeight="288.0" prefWidth="398.0" spacing="20.0">
-                                 <children>
-                                            <TextField fx:id="nom" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0" promptText="Nom du propriétaire" />
-                                            <TextField fx:id="numTelProprio" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0" promptText="Numéro de téléphone" />
-                                            <TextField fx:id="adresseProprio" maxWidth="250.0" minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="Adresse du propriétaire" />
-                                 </children>
-                                 <padding>
-                                    <Insets left="30.0" top="40.0" />
-                                 </padding>
-                              </VBox>
-                           </children>
-                        </VBox>
-                     </children>
-                  </HBox>
+                                <Insets top="20.0"/>
+                            </VBox.margin>
+                        </Label>
+                        <HBox alignment="CENTER" prefHeight="518.0" prefWidth="871.0" spacing="30.0">
+                            <children>
+                                <VBox maxHeight="350.0" prefWidth="400.0" styleClass="profil-container">
+                                    <children>
+                                        <VBox alignment="CENTER_LEFT" maxHeight="56.0" prefHeight="200.0"
+                                              prefWidth="100.0" styleClass="profil-container-header">
+                                            <children>
+                                                <Label styleClass="profil-container-header-title"
+                                                       text="Détails de l'entreprise"/>
+                                            </children>
+                                            <padding>
+                                                <Insets left="20.0"/>
+                                            </padding>
+                                        </VBox>
+                                        <VBox prefHeight="285.0" prefWidth="398.0" spacing="20.0">
+                                            <children>
+                                                <TextField fx:id="adresse" maxWidth="250.0" minHeight="40.0"
+                                                           minWidth="250.0" prefWidth="150.0"
+                                                           promptText="Adresse de l'entreprise"/>
+                                                <TextField fx:id="numTel" maxWidth="250.0" prefHeight="40.0"
+                                                           prefWidth="250.0" promptText="Numéro de téléphone"/>
+                                                <TextField fx:id="gps" maxWidth="250.0" prefHeight="40.0"
+                                                           prefWidth="250.0"
+                                                           promptText="Coordonnées GPS de l'entreprise"/>
+                                            </children>
+                                            <padding>
+                                                <Insets left="30.0" top="40.0"/>
+                                            </padding>
+                                        </VBox>
+                                    </children>
+                                </VBox>
+                                <VBox maxHeight="350.0" maxWidth="400.0" prefWidth="400.0"
+                                      styleClass="profil-container">
+                                    <children>
+                                        <VBox alignment="CENTER_LEFT" maxHeight="56.0" prefHeight="200.0"
+                                              prefWidth="100.0" styleClass="profil-container-header">
+                                            <children>
+                                                <Label styleClass="profil-container-header-title"
+                                                       text="Détails du propriétaire"/>
+                                            </children>
+                                            <VBox.margin>
+                                                <Insets/>
+                                            </VBox.margin>
+                                            <padding>
+                                                <Insets left="20.0"/>
+                                            </padding>
+                                        </VBox>
+                                        <VBox prefHeight="288.0" prefWidth="398.0" spacing="20.0">
+                                            <children>
+                                                <TextField fx:id="nom" maxWidth="250.0" prefHeight="40.0"
+                                                           prefWidth="250.0" promptText="Nom du propriétaire"/>
+                                                <TextField fx:id="numTelProprio" maxWidth="250.0" prefHeight="40.0"
+                                                           prefWidth="250.0" promptText="Numéro de téléphone"/>
+                                                <TextField fx:id="adresseProprio" maxWidth="250.0" minHeight="40.0"
+                                                           minWidth="250.0" prefWidth="150.0"
+                                                           promptText="Adresse du propriétaire"/>
+                                            </children>
+                                            <padding>
+                                                <Insets left="30.0" top="40.0"/>
+                                            </padding>
+                                        </VBox>
+                                    </children>
+                                </VBox>
+                            </children>
+                        </HBox>
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                             <children>
-                                <Button id="cmdButton" minHeight="40.0" minWidth="192.0" mnemonicParsing="false" onMouseClicked="#onCreateButton" styleClass="addCommandeButton" text="Ajouter l'entreprise" />
+                                <Button id="cmdButton" minHeight="40.0" minWidth="192.0" mnemonicParsing="false"
+                                        onMouseClicked="#onCreateButton" styleClass="addCommandeButton"
+                                        text="Ajouter l'entreprise"/>
                             </children>
                         </HBox>
                     </children>
                     <BorderPane.margin>
-                        <Insets />
+                        <Insets/>
                     </BorderPane.margin>
                     <padding>
-                        <Insets bottom="30.0" left="40.0" right="40.0" top="20.0" />
+                        <Insets bottom="30.0" left="40.0" right="40.0" top="20.0"/>
                     </padding>
                 </VBox>
             </center>
