--- a/src/main/resources/com/mmn/circuitscourts/fxml/Admin/AddVehicule.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Admin/AddVehicule.fxml
@@ -2,22 +2,20 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.layout.Region?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ComboBox?>
-<StackPane xmlns:fx="http://javafx.com/fxml/1" fx:id="stackPane" minHeight="800.0" minWidth="1200.0"
-           style="-fx-background-color: #EAECF0;" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19"
-           fx:controller="com.mmn.circuitscourts.controller.admin.AddVehiculeController">
+<StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: #EAECF0;" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mmn.circuitscourts.controller.admin.AddVehiculeController">
     <children>
         <BorderPane fx:id="container" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: white;">
             <left>
-                <fx:include source="Sidebar.fxml"/>
+                <fx:include source="Sidebar.fxml" />
             </left>
             <center>
 
@@ -25,54 +23,72 @@
             <center>
                 <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                     <children>
-                        <Button styleClass="back-button" mnemonicParsing="false" text="Retour" pickOnBounds="true"
-                                onMouseClicked="#onBackButton">
+                        <Button mnemonicParsing="false" onMouseClicked="#onBackButton" pickOnBounds="true" styleClass="back-button" text="Retour">
                             <graphic>
-                                <Region styleClass="back-button-img"/>
+                                <Region styleClass="back-button-img" />
                             </graphic>
                         </Button>
                         <Label styleClass="main-title" text="Ajout d'un véhicule">
                             <VBox.margin>
-                                <Insets top="20.0"/>
+                                <Insets top="20.0" />
                             </VBox.margin>
                         </Label>
+                  <HBox alignment="CENTER" prefHeight="496.0" prefWidth="871.0" spacing="30.0">
+                     <children>
+                        <VBox maxHeight="300.0" prefHeight="394.0" prefWidth="379.0" styleClass="profil-container">
+                           <children>
+                              <VBox alignment="CENTER_LEFT" maxHeight="56.0" prefHeight="200.0" prefWidth="100.0" styleClass="profil-container-header">
+                                 <children>
+                                    <Label styleClass="profil-container-header-title" text="Détails du véhicule" />
+                                 </children>
+                                 <padding>
+                                    <Insets left="20.0" />
+                                 </padding>
+                              </VBox>
+                              <VBox prefHeight="243.0" prefWidth="377.0" spacing="20.0">
+                                 <children>
+                                            <TextField fx:id="numImmat" maxWidth="250.0" minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="Numéro d'immatriculation" />
+                                            <TextField fx:id="poids" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0" promptText="Poids maximum supporté" />
+                                 </children>
+                                 <padding>
+                                    <Insets left="30.0" top="40.0" />
+                                 </padding>
+                              </VBox>
+                           </children>
+                        </VBox>
+                        <VBox maxHeight="300.0" prefHeight="534.0" prefWidth="400.0" styleClass="profil-container">
+                           <children>
+                              <VBox alignment="CENTER_LEFT" maxHeight="56.0" prefHeight="200.0" prefWidth="100.0" styleClass="profil-container-header">
+                                 <children>
+                                    <Label styleClass="profil-container-header-title" text="Entreprise" />
+                                 </children>
+                                 <padding>
+                                    <Insets left="20.0" />
+                                 </padding>
+                              </VBox>
+                              <VBox prefHeight="154.0" prefWidth="250.0">
+                                 <children>
+                                            <ComboBox fx:id="namesProd" minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="Entreprise propriétaire" />
+                                 </children>
+                                 <padding>
+                                    <Insets left="30.0" top="40.0" />
+                                 </padding>
+                              </VBox>
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                             <children>
-                                <TextField fx:id="numImmat" minHeight="40.0" minWidth="250.0" prefWidth="150.0"
-                                           promptText="Numéro d'immatriculation"/>
-                                <TextField fx:id="poids" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0"
-                                           promptText="Poids">
-                                    <HBox.margin>
-                                        <Insets left="200.0"/>
-                                    </HBox.margin>
-                                </TextField>
-                            </children>
-                            <VBox.margin>
-                                <Insets top="75.0"/>
-                            </VBox.margin>
-                        </HBox>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                            <children>
-                                <ComboBox fx:id="namesProd" minHeight="40.0" minWidth="250.0" prefWidth="150.0"
-                                          promptText="entreprises"/>
-                            </children>
-                            <VBox.margin>
-                                <Insets top="75.0"/>
-                            </VBox.margin>
-                        </HBox>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                            <children>
-                                <Button id="cmdButton" minHeight="40.0" minWidth="192.0" mnemonicParsing="false"
-                                        text="Ajouter le véhicule" onMouseClicked="#onCreateButton"
-                                        styleClass="addCommandeButton"/>
+                                <Button id="cmdButton" minHeight="40.0" minWidth="192.0" mnemonicParsing="false" onMouseClicked="#onCreateButton" styleClass="addCommandeButton" text="Ajouter le véhicule" />
                             </children>
                         </HBox>
                     </children>
                     <BorderPane.margin>
-                        <Insets/>
+                        <Insets />
                     </BorderPane.margin>
                     <padding>
-                        <Insets bottom="30.0" left="40.0" right="40.0" top="20.0"/>
+                        <Insets bottom="30.0" left="40.0" right="40.0" top="20.0" />
                     </padding>
                 </VBox>
             </center>
