--- a/src/main/resources/com/mmn/circuitscourts/fxml/Admin/EditAccount.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Admin/EditAccount.fxml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ComboBox?>
 
 <StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: white;" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mmn.circuitscourts.controller.admin.EditAccountController">
     <children>
@@ -19,43 +20,51 @@
             <center>
                 <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                     <children>
-                        <Button mnemonicParsing="false" styleClass="back-button" text="Retour" onMouseClicked="#onBackButton">
+                        <Button mnemonicParsing="false" onMouseClicked="#onBackButton" styleClass="back-button" text="Retour">
                             <graphic>
                                 <Region styleClass="back-button-img" />
                             </graphic>
                         </Button>
-                        <Label fx:id ="title" styleClass="main-title" text="Modification de la commande n°">
+                        <Label fx:id="title" styleClass="main-title" text="Modification de la commande n°">
                             <VBox.margin>
                                 <Insets top="20.0" />
                             </VBox.margin>
                         </Label>
+                  <HBox alignment="CENTER" prefHeight="427.0" prefWidth="871.0">
+                     <children>
+                        <VBox maxHeight="300.0" prefWidth="400.0" styleClass="profil-container">
+                           <children>
+                              <VBox alignment="CENTER_LEFT" maxHeight="56.0" prefHeight="200.0" prefWidth="100.0" styleClass="profil-container-header">
+                                 <padding>
+                                    <Insets left="20.0" />
+                                 </padding>
+                                 <children>
+                                    <Label styleClass="profil-container-header-title" text="Détails du compte" />
+                                 </children>
+                              </VBox>
+                              <VBox prefHeight="238.0" prefWidth="398.0" spacing="20.0">
+                                 <children>
+                                            <TextField fx:id="identifiant" maxWidth="250.0" minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="Identifiant" />
+                                            <TextField fx:id="mdp" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0" promptText="Mot de passe" />
+                                            <ComboBox fx:id="grade" minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="Selectionner le grade" />
+                                 </children>
+                                 <padding>
+                                    <Insets left="30.0" top="40.0" />
+                                 </padding>
+                              </VBox>
+                           </children>
+                        </VBox>
+                     </children>
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
+                  </HBox>
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                            <children>
+                                <Button id="cmdButton" minHeight="40.0" minWidth="192.0" mnemonicParsing="false" onMouseClicked="#onEditButton" styleClass="addCommandeButton" text="Modifier le compte" />
+                            </children>
+                        </HBox>
                     </children>
-                    <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                        <children>
-                            <TextField fx:id="identifiant" minHeight="40.0" minWidth="250.0" prefWidth="150.0"/>
-                            <TextField fx:id="mdp" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0">
-                                <HBox.margin>
-                                    <Insets left="200.0" />
-                                </HBox.margin>
-                            </TextField>
-                        </children>
-                        <VBox.margin>
-                            <Insets top="75.0" />
-                        </VBox.margin>
-                    </HBox>
-                    <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                        <children>
-                            <ComboBox fx:id="grade" minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="Selectionner le grade"/>
-                        </children>
-                        <VBox.margin>
-                            <Insets top="25.0" />
-                        </VBox.margin>
-                    </HBox>
-                    <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                        <children>
-                            <Button id="cmdButton" minHeight="40.0" minWidth="192.0" mnemonicParsing="false" text="Modifier le compte" onMouseClicked="#onEditButton" styleClass="addCommandeButton"/>
-                        </children>
-                    </HBox>
                     <padding>
                         <Insets bottom="30.0" left="40.0" right="40.0" top="20.0" />
                     </padding>
