--- a/src/main/resources/com/mmn/circuitscourts/fxml/Admin/EditEntreprise.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Admin/EditEntreprise.fxml
@@ -9,54 +9,103 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.control.TextField?>
 
-<StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: white;" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mmn.circuitscourts.controller.admin.EditEntrepriseController">
+<StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: white;"
+           stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
+           fx:controller="com.mmn.circuitscourts.controller.admin.EditEntrepriseController">
     <children>
         <BorderPane fx:id="container" prefHeight="700.0" prefWidth="1000.0">
             <left>
-                <fx:include source="Sidebar.fxml" />
+                <fx:include source="Sidebar.fxml"/>
             </left>
             <center>
                 <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                     <children>
-                        <Button mnemonicParsing="false" styleClass="back-button" text="Retour" onMouseClicked="#onBackButton">
+                        <Button mnemonicParsing="false" styleClass="back-button" text="Retour"
+                                onMouseClicked="#onBackButton">
                             <graphic>
-                                <Region styleClass="back-button-img" />
+                                <Region styleClass="back-button-img"/>
                             </graphic>
                         </Button>
-                        <Label fx:id ="title" styleClass="main-title" text="Modification du propriétaire n°">
+                        <Label fx:id="title" styleClass="main-title" text="Modification du propriétaire n°">
                             <VBox.margin>
-                                <Insets top="20.0" />
+                                <Insets top="20.0"/>
                             </VBox.margin>
                         </Label>
+                        <HBox alignment="CENTER" prefHeight="518.0" prefWidth="871.0" spacing="30.0">
+                            <children>
+                                <VBox maxHeight="350.0" prefWidth="400.0" styleClass="profil-container">
+                                    <children>
+                                        <VBox alignment="CENTER_LEFT" maxHeight="56.0" prefHeight="200.0"
+                                              prefWidth="100.0" styleClass="profil-container-header">
+                                            <children>
+                                                <Label styleClass="profil-container-header-title"
+                                                       text="Détails de l'entreprise"/>
+                                            </children>
+                                            <padding>
+                                                <Insets left="20.0"/>
+                                            </padding>
+                                        </VBox>
+                                        <VBox prefHeight="285.0" prefWidth="398.0" spacing="20.0">
+                                            <children>
+                                                <TextField fx:id="adresse" maxWidth="250.0" minHeight="40.0"
+                                                           minWidth="250.0" prefWidth="150.0"
+                                                           promptText="Adresse de l'entreprise"/>
+                                                <TextField fx:id="numTel" maxWidth="250.0" prefHeight="40.0"
+                                                           prefWidth="250.0" promptText="Numéro de téléphone"/>
+                                                <TextField fx:id="gps" maxWidth="250.0" prefHeight="40.0"
+                                                           prefWidth="250.0"
+                                                           promptText="Coordonnées GPS de l'entreprise"/>
+                                            </children>
+                                            <padding>
+                                                <Insets left="30.0" top="40.0"/>
+                                            </padding>
+                                        </VBox>
+                                    </children>
+                                </VBox>
+                                <VBox maxHeight="350.0" maxWidth="400.0" prefWidth="400.0"
+                                      styleClass="profil-container">
+                                    <children>
+                                        <VBox alignment="CENTER_LEFT" maxHeight="56.0" prefHeight="200.0"
+                                              prefWidth="100.0" styleClass="profil-container-header">
+                                            <children>
+                                                <Label styleClass="profil-container-header-title"
+                                                       text="Détails du propriétaire"/>
+                                            </children>
+                                            <VBox.margin>
+                                                <Insets/>
+                                            </VBox.margin>
+                                            <padding>
+                                                <Insets left="20.0"/>
+                                            </padding>
+                                        </VBox>
+                                        <VBox prefHeight="288.0" prefWidth="398.0" spacing="20.0">
+                                            <children>
+                                                <TextField fx:id="nom" maxWidth="250.0" prefHeight="40.0"
+                                                           prefWidth="250.0" promptText="Nom du propriétaire"/>
+                                                <TextField fx:id="numTelProprio" maxWidth="250.0" prefHeight="40.0"
+                                                           prefWidth="250.0" promptText="Numéro de téléphone"/>
+                                                <TextField fx:id="adresseProprio" maxWidth="250.0" minHeight="40.0"
+                                                           minWidth="250.0" prefWidth="150.0"
+                                                           promptText="Adresse du propriétaire"/>
+                                            </children>
+                                            <padding>
+                                                <Insets left="30.0" top="40.0"/>
+                                            </padding>
+                                        </VBox>
+                                    </children>
+                                </VBox>
+                            </children>
+                        </HBox>
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                            <children>
+                                <Button id="editButton" minHeight="40.0" minWidth="192.0" mnemonicParsing="false"
+                                        text="Modifier le propriétaire" onMouseClicked="#onEditButton"
+                                        styleClass="addCommandeButton"/>
+                            </children>
+                        </HBox>
                     </children>
-                    <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                        <children>
-                            <TextField fx:id="adresse" minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="Selectionner l'article"/>
-                            <TextField fx:id="numTel" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0" promptText="Quantité">
-                                <HBox.margin>
-                                    <Insets left="200.0" />
-                                </HBox.margin>
-                            </TextField>
-                        </children>
-                        <VBox.margin>
-                            <Insets top="75.0" />
-                        </VBox.margin>
-                    </HBox>
-                    <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                        <children>
-                            <TextField fx:id="gps" minHeight="40.0" minWidth="250.0" promptText="coordonnées GPS"/>
-                        </children>
-                        <VBox.margin>
-                            <Insets top="25.0" />
-                        </VBox.margin>
-                    </HBox>
-                    <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                        <children>
-                            <Button id="editButton" minHeight="40.0" minWidth="192.0" mnemonicParsing="false" text="Modifier le propriétaire" onMouseClicked="#onEditButton" styleClass="addCommandeButton"/>
-                        </children>
-                    </HBox>
                     <padding>
-                        <Insets bottom="30.0" left="40.0" right="40.0" top="20.0" />
+                        <Insets bottom="30.0" left="40.0" right="40.0" top="20.0"/>
                     </padding>
                 </VBox>
             </center>
